# bike-sharing-forecast

./: .env.example  .git-blame-ignore-revs  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  dvc.yaml  pyproject.toml  requirements.in  requirements.txt
.dvc/: config
.github/workflows/: ci.yml  deploy-azure.yml  hourly.yml  weekly.yml
artifacts/drift/: drift_detected.json
artifacts/evaluation/: metrics.json
artifacts/monitoring/: drift_history.csv  retrain_outcome.json  (+2 more)
azure/: conda.yaml  conda_endpoint.yaml  deployment.yaml  endpoint.yaml  environment.yaml  job.yaml  sample_request.json  score.py  sync_deployment_versions.py
configs/: config.yaml
data/: .gitignore  last_retrain.json.dvc  raw.dvc  simulation_state.json  simulation_state.json.dvc
docs/: architecture.md  azure.md  feature_engineering.md  forecasting.md  known-issues.md  model_card.md  overview.md  simulation.md  usage.md
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  02_feature_engineering_and_baseline.ipynb  03_batch_scoring_validation.ipynb  04_experimento_horizontes.ipynb  05_multi_horizon_forecasting.ipynb
tests/: conftest.py  test_alerting.py  test_azure_score.py  test_build_features.py  test_dashboard.py  test_drift_detection.py  test_evaluate.py  test_hourly_alert.py  test_monitoring_utils.py  test_output_drift_detection.py  test_performance_monitoring.py  test_predict.py  test_retrain.py  test_shift_dates.py  test_suggest_thresholds.py  test_sync_deployment_versions.py  test_train.py  test_update_simulation.py  test_validate_data.py  test_weekly_report.py
(+39 files in other folders)
